--- a/omzsh.yml
+++ b/omzsh.yml
@@ -1,9 +1,6 @@
 - name: Install OMZSH and make it default shell on Ubuntu
   hosts: localhost
 
-  vars:
-    ansible_user: ubuntu
-
   tasks:
     - name: Install zsh packages
       become: true
@@ -24,21 +21,25 @@
         repo: https://github.com/ohmyzsh/ohmyzsh.git
         dest: ~/.oh-my-zsh
         depth: 1
+        update: false
 
     - name: Install zsh-autosuggestions plugin # noqa: latest
       ansible.builtin.git:
         repo: https://github.com/zsh-users/zsh-autosuggestions
         dest: ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
         depth: 1
+        update: false
 
     - name: Install zsh-completions plugin # noqa: latest
       ansible.builtin.git:
         repo: https://github.com/zsh-users/zsh-completions
         dest: ~/.oh-my-zsh/custom/plugins/zsh-completions
         depth: 1
+        update: false
 
     - name: Install zsh-syntax-highlighting plugin # noqa: latest
       ansible.builtin.git:
         repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
         dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
         depth: 1
+        update: false
