--- a/main.yml
+++ b/main.yml
@@ -16,5 +16,8 @@
 - name: Install packages and applications
   ansible.builtin.import_playbook: packages.yml
 
+- name: Install Python
+  ansible.builtin.import_playbook: python.yml
+
 - name: Install Java
   ansible.builtin.import_playbook: java.yml
