--- a/cheat.yml
+++ b/cheat.yml
@@ -1,6 +1,6 @@
 - name: Install cheat on Ubuntu
   hosts: localhost
-  become: true # Run tasks as sudo
+  become: false
 
   vars:
     cheat_version: "4.4.0"
@@ -37,6 +37,27 @@
             mode: '0755'
 
         - name: Move cheat binary to /usr/local/bin
+          become: true
           ansible.builtin.command:
             cmd: "mv {{ executable_file }} /usr/local/bin/cheat"
             removes: "{{ executable_file }}"
+
+        - name: Clone cheat community repository # noqa: latest
+          ansible.builtin.git:
+            repo: "https://github.com/cheat/cheatsheets.git"
+            dest: "~/.config/cheat/cheatsheets/community"
+
+        - name: Run cheat to generate config file and directories
+          ansible.builtin.shell:
+            cmd: |
+              mkdir -p ~/.config/cheat
+              mkdir -p ~/.config/cheat/cheatsheets/personal
+              cheat --init > ~/.config/cheat/conf.yml
+            creates: "~/.config/cheat/conf.yml"
+
+        - name: Fix pager in config file
+          ansible.builtin.lineinfile:
+            path: ~/.config/cheat/conf.yml
+            regexp: '^pager'
+            line: 'pager: less -FRX'
+
