Enable mouse scroll in tmux copy mode.

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -1,3 +1,15 @@
+# command for reloading tmux config
+# tmux source-file ~/.tmux.conf
+
+# white status bar
 set -g status-bg white
+
+# set full color support
 set -g default-terminal "tmux-256color"
 set -sg terminal-overrides ",*:RGB"
+
+# scroll mouse in tmux
+set -g mouse on
+
+# vim keybindings in copy mode
+setw -g mode-keys vi
