Clean up secrets folder sturcture

--- a/secrets.yml
+++ b/secrets.yml
@@ -7,7 +7,7 @@
 
         - name: Ssh files
           ansible.builtin.copy:
-            src: "secrets/"
+            src: "secrets/ssh/"
             dest: "{{ ansible_env.HOME }}/.ssh/"
             mode: "0400"
 
@@ -27,13 +27,8 @@
           failed_when: ssh_add_nc.rc != 0
           changed_when: false
 
-    - name: Remove rclone from from ssh folder
-      ansible.builtin.file:
-        path: "{{ ansible_env.HOME }}/.ssh/rclone.conf"
-        state: absent
-
     - name: Rclone config file
       ansible.builtin.copy:
-        src: "secrets/rclone.conf"
+        src: "secrets/rclone/rclone.conf"
         dest: "{{ ansible_env.HOME }}/.config/rclone/"
         mode: "0644"
