--- a/brew.yml
+++ b/brew.yml
@@ -15,13 +15,13 @@
         state: present
       become: true
 
-    - name: Check if brew is installed # noqa: command-instead-of-shell
-      ansible.builtin.command:
-        cmd: "brew --version"
+    - name: Check if brew is installed
+      ansible.builtin.shell:
+        cmd: "/home/linuxbrew/.linuxbrew/bin/brew --version"
+        executable: /bin/zsh
       register: brew_version_output
       failed_when: false
       changed_when: false
-      become: false
 
     - name: Install brew
       when: brew_version_output.rc != 0
