Add check to prevent always download the package.

--- a/chrome.yml
+++ b/chrome.yml
@@ -3,22 +3,36 @@
   hosts: localhost
 
   tasks:
-    - name: Download Chrome
-      ansible.builtin.get_url:
-        url: "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
-        dest: "/tmp/google-chrome-stable_current_amd64.deb"
-        mode: "0644"
-        validate_certs: false
-        force: true
-      register: chrome_download
-      until: chrome_download is succeeded
-      retries: 5
-      delay: 5
 
-    - name: Install Chrome
-      become: true
-      ansible.builtin.apt:
-        deb: "/tmp/google-chrome-stable_current_amd64.deb"
-        state: present
-      register: chrome_install
-      until: chrome_install is succeeded
+    - name: Check if Chrome is installed
+      ansible.builtin.shell:
+        cmd: |
+          set -o pipefail
+          dpkg -l | grep google-chrome-stable
+        executable: /bin/zsh
+      register: chrome_check
+      changed_when: false
+      failed_when: false
+
+    - name: Download and install Chrome
+      when: chrome_check.stdout == ""
+      block:
+        - name: Download Chrome
+          ansible.builtin.get_url:
+            url: "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
+            dest: "/tmp/google-chrome-stable_current_amd64.deb"
+            mode: "0644"
+            validate_certs: false
+            force: true
+          register: chrome_download
+          until: chrome_download is succeeded
+          retries: 5
+          delay: 5
+
+        - name: Install Chrome
+          become: true
+          ansible.builtin.apt:
+            deb: "/tmp/google-chrome-stable_current_amd64.deb"
+            state: present
+          register: chrome_install
+          until: chrome_install is succeeded
