--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -19,3 +19,12 @@
         group: "{{ ansible_user_id }}"
         mode: "0644"
         force: false
+
+    - name: Allacritty config file
+      ansible.builtin.copy:
+        src: "files/allacritty.yml"
+        dest: "~/.config/allacritty/"
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_id }}"
+        mode: "0644"
+        force: false
