--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -13,3 +13,7 @@ set -g mouse on
 
 # vim keybindings in copy mode
 setw -g mode-keys vi
+
+# something required by nstronvim
+set-option -sg escape-time 50
+set-option -g focus-events on
