--- a/python.yml
+++ b/python.yml
@@ -54,8 +54,7 @@
         - name: Install 3.12 version of python under pyenv # https://github.com/pyenv/pyenv/issues/2823
           ansible.builtin.shell:
             cmd: |
-              brew unlink pkg-config
-              . ~/.zshrc && pyenv install -s 3.12.0
+              . ~/.zshrc && brew unlink pkg-config && pyenv install -s 3.12.0
             executable: /bin/zsh
             creates: "~/.pyenv/versions/3.12.0"
 
