--- a/folders.yml
+++ b/folders.yml
@@ -8,8 +8,8 @@
         state: directory
         mode: "0755"
 
-    - name: Create rclone config folder
+    - name: Create apps config folder
       ansible.builtin.file:
-        path: "~/.config/rclone"
+        path: "~/apps"
         state: directory
         mode: "0755"
