Run cloning private repo only if .ssh folder exists.

--- a/main-after-secrets.yml
+++ b/main-after-secrets.yml
@@ -1,5 +1,12 @@
 - name: Playbooks to run after installing secrets.
   hosts: localhost
 
+  tasks:
+    - name: Check if ssh folder exists
+      ansible.builtin.stat:
+        path: ~/.ssh
+      register: ssh_folder
+
 - name: My clone of cheat repo
+  when: ssh_folder.stat.exists
   ansible.builtin.import_playbook: cheat-repo.yml
