Changed how the secrets are handled.

--- a/secrets.yml
+++ b/secrets.yml
@@ -1,13 +1,28 @@
 - name: Copy dot files
   hosts: localhost
 
+
   tasks:
-    - name: Copy ssh files and add private keys to ssh-agent
+    - name: Check if dotfiles-main.zip file exists
+      ansible.builtin.stat:
+        path: "~/dotfiles-main.zip"
+      register: dotfiles_zip
+
+    - name: Unzip dotfiles-main.zip file if exists
+      when: dotfiles_zip.stat.exists
+      ansible.builtin.unarchive:
+        src: "~/dotfiles-main.zip"
+        dest: "./secrets"
+        remote_src: true
+      register: dotfiles_unzip
+
+    - name: Copy ssh and rclone files and add private keys to ssh-agent # noqa: no-handler
+      when: dotfiles_unzip.changed
       block:
 
         - name: Ssh files
           ansible.builtin.copy:
-            src: "secrets/ssh/"
+            src: "secrets/dotfiles-main/ssh/"
             dest: "{{ ansible_env.HOME }}/.ssh/"
             mode: "0600"
 
@@ -27,8 +42,13 @@
           failed_when: ssh_add_nc.rc != 0
           changed_when: false
 
-    - name: Rclone config file
-      ansible.builtin.copy:
-        src: "secrets/rclone/rclone.conf"
-        dest: "{{ ansible_env.HOME }}/.config/rclone/"
-        mode: "0644"
+        - name: Rclone config file
+          ansible.builtin.copy:
+            src: "secrets/dotfiles-main/rclone/rclone.conf"
+            dest: "{{ ansible_env.HOME }}/.config/rclone/"
+            mode: "0644"
+
+        - name: Remove secrets folder
+          ansible.builtin.file:
+            path: "./secrets/dotfiles-main"
+            state: absent
