--- a/files.yml
+++ b/files.yml
@@ -11,12 +11,13 @@
         dest: "~/.config/allacritty/"
       - src: "files/local/share/konsole/WS.profile"
         dest: "~/.local/share/konsole/"
+    files_force:
       - src: "files/config/konsolerc"
         dest: "~/.config/"
 
   tasks:
 
-    - name: Copy files
+    - name: Copy files if they don't exist
       ansible.builtin.copy:
         src: "{{ item.src }}"
         dest: "{{ item.dest }}"
@@ -25,3 +26,13 @@
         mode: "0644"
         force: false
       loop: "{{ files }}"
+
+    - name: Copy files if they exist
+      ansible.builtin.copy:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_id }}"
+        mode: "0644"
+        force: true
+      loop: "{{ files_force }}"
