--- a/main-after-secrets.yml
+++ b/main-after-secrets.yml
@@ -7,6 +7,16 @@
         path: ~/.ssh
       register: ssh_folder
 
+    - name: Copy public key
+      ansible.builtin.copy:
+        src: ~/.ssh/id_rsa_paterit.pub
+        dest: ~/.ssh/authorized_keys
+        mode: "0600"
+      when: ssh_folder.stat.exists
+
 - name: My clone of cheat repo
   when: ssh_folder.stat.exists
   ansible.builtin.import_playbook: cheat-repo.yml
+
+- name: Set up openssh-server
+  ansible.builtin.import_playbook: openssh.yml
